fix form grid on small screens

--- a/css/kv-apartments.css
+++ b/css/kv-apartments.css
@@ -17,13 +17,13 @@ body {
 }
 
 form div.unit {
-    display: inline-block;
+    display: inline;
     padding: 5px 5px 10px 10px;
     vertical-align: top;
 }
 
 div.unit p, div.unit input, div.unit select {
-    display: inline;
+    display: inline !important;
 }
 
 input.narrow_numeric {
